# mitmproxy-mcp

./: AGENTS.md  INSTALL.md  README.md  README_EN.md  pyproject.toml
.agents/skills/mitmproxy_mcp/: SKILL.md
.agents/skills/mitmproxy_mcp/references/: crypto_handler.md
.kimi-code/skills/mitmproxy_mcp/: SKILL.md
.kimi-code/skills/mitmproxy_mcp/references/: crypto_handler.md
examples/: crypto_dynamic_key_example.py  crypto_xor_example.py  mcp-config-sse.json  mcp-config.json
src/mitmproxy_mcp/: __init__.py  __main__.py  crypto.py  events.py  har.py  json_tools.py  mappings.py  models.py  proxy.py  resources.py  rules.py  server.py  store.py  tool_info.py  utils.py  websocket_rules.py
tests/: test_all_tools.py  test_ca_ctl.py  test_capture_rules.py  test_clear_all.py  test_crypto.py  test_har.py  test_json_tools.py  test_mappings.py  test_mappings_integration.py  test_mock_server.py  test_models.py  test_playwright_capture.py  test_proxy.py  test_resources.py  test_rules.py  test_rules_integration.py  test_server.py  test_sse_transport.py  test_store.py  test_tier2_resources.py  test_tool_info.py  test_websocket.py  test_websocket_ctl.py  test_websocket_integration.py
