[project]
name = "mitmproxy-mcp"
version = "0.1.0"
description = "A lightweight MCP server for mitmproxy packet capture, replay and modification."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.28.0",
    "mitmproxy>=12.2.3",
    "jsonpath-ng>=1.5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "websockets>=13.0",
]

[project.scripts]
mitmproxy-mcp = "mitmproxy_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mitmproxy_mcp"]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (network/browser required)",
]
addopts = "-m 'not integration'"
